Bug 53147 - udisks2 spams log with missing distribution specific message: "Failed to open file '/etc/crypttab"
Summary: udisks2 spams log with missing distribution specific message: "Failed to open...
Status: RESOLVED FIXED
Alias: None
Product: udisks
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: high normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-06 04:42 UTC by Samuli Suominen
Modified: 2012-09-27 17:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Samuli Suominen 2012-08-06 04:42:35 UTC
"Failed to open file '/etc/crypttab" message is getting repeated over and over again in logs. Please make it just check once if crypttab is there or not to prevent the logs getting cluttered[1]

/etc/crypttab is used in Fedora, Debian, and Ubuntu after quick look and it seems distribution specific file not bound to any standards.

In Gentoo we configure these in /etc/conf.d/dmcrypt with different syntax. 
Gentoo will propably switch to using /etc/crypttab too just to be closer to others but it will take some time[2]

Related bugs:

[1] https://bugs.gentoo.org/show_bug.cgi?id=429390
[2] https://bugs.gentoo.org/show_bug.cgi?id=429966
Comment 1 David Zeuthen (not reading bugmail) 2012-09-27 17:02:59 UTC
Sure thing, fixed here:

 http://cgit.freedesktop.org/udisks/commit/?id=1f196a9f2f0f9e1d9e4c037f73a3db7fc2958057


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.